@@ -1,0 +1,70 @@
+/**
+ * Project:      Open Vehicle Monitor System
+ * Module:       VW e-Up via OBD Port
+ *
+ * (c) 2021 sharkcow <sharkcow@gmx.de>, Chris van der Meijden, SokoFromNZ, Michael Balzer <dexter@dexters-web.de>
+ *
+ * Permission is hereby granted, free of charge, to any person obtaining a copy
+ * of this software and associated documentation files (the "Software"), to deal
+ * in the Software without restriction, including without limitation the rights
+ * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+ * copies of the Software, and to permit persons to whom the Software is
+ * furnished to do so, subject to the following conditions:
+ *
+ * The above copyright notice and this permission notice shall be included in
+ * all copies or substantial portions of the Software.
+ *
+ * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+ * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+ * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+ * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+ * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+ * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
+ * THE SOFTWARE.
+ */
+
+// #include "ovms_log.h"
+// static const char *TAG = "v-vweup";
+
+#include <stdio.h>
+#include <string>
+#include <algorithm>
+#include "ovms_command.h"
+#include "ovms_utils.h"
+#include "vehicle_vweup.h"
+#include "vweup_obd.h"
+
+using namespace std;
+
+
+void OvmsVehicleVWeUp::ShellPollControl(int verbosity, OvmsWriter* writer, OvmsCommand* cmd, int argc, const char* const* argv)
+{
+  OvmsVehicleVWeUp* me = GetInstance(writer);
+  string command = cmd->GetName();
+
+  if (!me) {
+    writer->puts("ERROR: vehicle module VWEUP not loaded");
+    return;
+  }
+  else if (!me->HasOBD()) {
+    writer->puts("ERROR: VWEUP OBD connection not enabled");
+    return;
+  }
+
+  // change OBD state?
+  obd_state_t state = me->m_obd_state;
+  if (command == "pause")
+    state = OBDS_Pause;
+  else if (command == "continue")
+    state = OBDS_Run;
+  if (state != me->m_obd_state && !me->OBDSetState(state)) {
+    writer->printf("ERROR: %s failed\n", command.c_str());
+  }
+
+  // report current/new status:
+  writer->printf(
+    "OBD polling status: %s\n"
+    "OBD poller state: %s\n",
+    GetOBDStateName(me->m_obd_state),
+    GetPollStateName(me->m_poll_state));
+}
